design_2/clusters/ismail.oteemo-xc.com/prometheus-operator/templates/prometheus/service.yaml
---
# Source: prometheus-operator/templates/prometheus/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: prometheus-prometheus-oper-prometheus
  #Modified from upstream chart explicitly adding namespace
  namespace: design2
  labels:
    app: prometheus-operator-prometheus
    
    chart: prometheus-operator-4.3.2
    release: "prometheus"
    heritage: "Tiller"
    clusterName: ismail.oteemo-xc.com
    
spec:
  ports:
  - name: web
    port: 9090
    targetPort: 9090
  selector:
    app: prometheus
    prometheus: prometheus-prometheus-oper-prometheus
  type: "ClusterIP"
